--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,16 @@ spring.security.oauth2.client.registration.google.client-secret=${YOUR_GOOGLE_CL
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.google.scope=profile,email
+
+# Swagger
+springdoc.api-docs.path=/api-docs
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=/swagger-ui
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.groups-order=asc
+springdoc.swagger-ui.tags-sorter=alpha
+springdoc.swagger-ui.operations-sorter=alpha
+springdoc.swagger-ui.display-request-duration=true
+
 # properties
 #spring.config.import=classpath:database.properties, classpath:cloud.properties
