feat: 운세 조회 기능

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,16 @@
 spring.application.name=unsemawang
 spring.config.import=optional:file:.env[.properties]
-
 # DataSource Settings
 spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-
 # JPA Settings
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
 spring.jpa.generate-ddl=${SPRING_JPA_GENERATE_DDL}
 spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
 spring.jpa.properties.hibernate.format_sql=${SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL}
 spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM}
-
 #registration
 spring.security.oauth2.client.registration.google.client-name=google
 spring.security.oauth2.client.registration.google.client-id=${YOUR_GOOGLE_CLIENT_ID}
@@ -21,7 +18,6 @@ spring.security.oauth2.client.registration.google.client-secret=${YOUR_GOOGLE_CL
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.google.scope=profile,email
-
 # Swagger
 springdoc.api-docs.path=/api-docs
 springdoc.api-docs.enabled=true
@@ -31,6 +27,13 @@ springdoc.swagger-ui.groups-order=asc
 springdoc.swagger-ui.tags-sorter=alpha
 springdoc.swagger-ui.operations-sorter=alpha
 springdoc.swagger-ui.display-request-duration=true
-
 # properties
 #spring.config.import=classpath:database.properties, classpath:cloud.properties
+# External Api
+external.api.tojeong.url=${EXTERNAL_API_TOJEONG_URL}
+external.api.sinsu.url=${EXTERNAL_API_SINSU_URL}
+external.api.insaeng.url=${EXTERNAL_API_INSAENG_URL}
+external.api.sajuunse.url=${EXTERNAL_API_SAJUUNSE_URL}
+external.api.todayunse.url=${EXTERNAL_API_TODAYUNSE_URL}
+external.api.gunghap.url=${EXTERNAL_API_GUNGHAP_URL}
+external.api.unsepuri.url=${EXTERNAL_API_UNSEPURI_URL}
