--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,12 +12,19 @@ spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
 spring.jpa.properties.hibernate.format_sql=${SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL}
 spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM}
 #registration
-spring.security.oauth2.client.registration.google.client-name=google
+spring.security.oauth2.client.registration.google.client-name=google 
 spring.security.oauth2.client.registration.google.client-id=${YOUR_GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${YOUR_GOOGLE_CLIENT_SECRET}
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=${YOUR_GOOGLE_REDIRECT_URL}
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.google.scope=profile,email
+
+#provider
+#spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+#spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+#spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+#spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
 # Swagger
 springdoc.api-docs.path=/api-docs
 springdoc.api-docs.enabled=true
@@ -27,8 +34,7 @@ springdoc.swagger-ui.groups-order=asc
 springdoc.swagger-ui.tags-sorter=alpha
 springdoc.swagger-ui.operations-sorter=alpha
 springdoc.swagger-ui.display-request-duration=true
-# properties
-#spring.config.import=classpath:database.properties, classpath:cloud.properties
+
 # External Api
 external.api.tojeong.url=${EXTERNAL_API_TOJEONG_URL}
 external.api.sinsu.url=${EXTERNAL_API_SINSU_URL}
@@ -37,3 +43,14 @@ external.api.sajuunse.url=${EXTERNAL_API_SAJUUNSE_URL}
 external.api.todayunse.url=${EXTERNAL_API_TODAYUNSE_URL}
 external.api.gunghap.url=${EXTERNAL_API_GUNGHAP_URL}
 external.api.unsepuri.url=${EXTERNAL_API_UNSEPURI_URL}
+
+#JWT secretKey
+spring.jwt.secret=${SPRING_JWT_SECRET}
+
+#logging
+logging.level.com.palbang.unsemawang.oauth2=DEBUG
+logging.level.com.palbang.unsemawang.jwt=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+# properties
+#spring.config.import=classpath:database.properties, classpath:cloud.properties
