--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=unsemawang
+server.port=8080
 spring.config.import=optional:file:.env[.properties]
 # DataSource Settings
 spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
@@ -12,19 +13,12 @@ spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
 spring.jpa.properties.hibernate.format_sql=${SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL}
 spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM}
 #registration
-spring.security.oauth2.client.registration.google.client-name=google 
+spring.security.oauth2.client.registration.google.client-name=google
 spring.security.oauth2.client.registration.google.client-id=${YOUR_GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${YOUR_GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.redirect-uri=${YOUR_GOOGLE_REDIRECT_URL}
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.google.scope=profile,email
-
-#provider
-#spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
-#spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
-#spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
-#spring.security.oauth2.client.provider.naver.user-name-attribute=response
-
 # Swagger
 springdoc.api-docs.path=/api-docs
 springdoc.api-docs.enabled=true
@@ -34,7 +28,6 @@ springdoc.swagger-ui.groups-order=asc
 springdoc.swagger-ui.tags-sorter=alpha
 springdoc.swagger-ui.operations-sorter=alpha
 springdoc.swagger-ui.display-request-duration=true
-
 # External Api
 external.api.tojeong.url=${EXTERNAL_API_TOJEONG_URL}
 external.api.sinsu.url=${EXTERNAL_API_SINSU_URL}
@@ -43,14 +36,14 @@ external.api.sajuunse.url=${EXTERNAL_API_SAJUUNSE_URL}
 external.api.todayunse.url=${EXTERNAL_API_TODAYUNSE_URL}
 external.api.gunghap.url=${EXTERNAL_API_GUNGHAP_URL}
 external.api.unsepuri.url=${EXTERNAL_API_UNSEPURI_URL}
-
 #JWT secretKey
 spring.jwt.secret=${SPRING_JWT_SECRET}
-
 #logging
 logging.level.com.palbang.unsemawang.oauth2=DEBUG
 logging.level.com.palbang.unsemawang.jwt=DEBUG
 logging.level.org.springframework.security=DEBUG
-
-# properties
-#spring.config.import=classpath:database.properties, classpath:cloud.properties
+# AWS
+cloud.aws.credentials.access-key=${AWS_ACCESS_KEY_ID}
+cloud.aws.credentials.secret-key=${AWS_SECRET_ACCESS_KEY}
+cloud.aws.region.static=${AWS_REGION}
+cloud.aws.s3.bucket=${S3_BUCKET_NAME}
