--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -79,7 +79,7 @@ jobs:
       with:
         aws-access-key-id:  ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        region: ap-northeast-2
+        aws-region: ap-northeast-2
         
     - name: Set up SSH key
       run: echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > private_key.pem
