--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,17 +35,9 @@ jobs:
 
       - name: Build with Gradle Wrapper
         run: ./gradlew build -x test
-
-    # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
-    # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
-    #
-    # - name: Setup Gradle
-    #   uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-    #   with:
-    #     gradle-version: '8.9'
-    #
-    # - name: Build with Gradle 8.9
-    #   run: gradle build
+        
+      - name: List files in build/libs
+        run: ls -alh build/libs/
 
   dependency-submission:
 
@@ -81,15 +73,14 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-2
 
-      - name: Copy JAR to EC2
+      - name: Copy build file to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.EC2_PUBLIC_IP }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-          source: ./build/libs/unsemawang-0.0.1-SNAPSHOT.jar
+          source: $GITHUB_WORKSPACE/build/libs/unsemawang-0.0.1-SNAPSHOT.jar
           target: /home/ubuntu/unsemawang/unsemawang.jar
-
 
       - name: Execute remote SSH commands
         uses: appleboy/ssh-action@v0.1.7
