--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -51,9 +51,10 @@ jobs:
 
       - name: Copy build file to EC2
         run: |
-          echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > private_key.pem
+          echo ${{ secrets.EC2_SSH_PRIVATE_KEY }} > private_key.pem
+          ls -alh private_key.pem
           chmod 600 private_key.pem
-          scp -o StrictHostKeyChecking=no -i private_key.pem build/libs/unsemawang-0.0.1-SNAPSHOT.jar ubuntu@<${{ secrets.EC2_PUBLIC_IP }}>:/home/ubuntu/unsemawang.jar
+          scp -o StrictHostKeyChecking=no -i private_key.pem build/libs/unsemawang-0.0.1-SNAPSHOT.jar ubuntu@${{ secrets.EC2_PUBLIC_IP }}:/home/ubuntu/unsemawang.jar
 
       - name: Execute remote SSH commands
         uses: appleboy/ssh-action@v0.1.7
