--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,11 +1,4 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
-name: Java CI with Gradle and Deploy to EC2
+name: CI/CD with Docker
 
 on:
   push:
@@ -19,47 +12,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
-      # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-        
-      - name: Build with Gradle Wrapper
-        run: ./gradlew build -x test
-        
-      - name: List files in build/libs
-        run: ls -alh build/libs/
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [ build ]
-
-    steps:
-      - name: Set up AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-northeast-2
-
-      - name: Copy build file to EC2
+      - name: Build Docker image
+        run: docker build --platform linux/amd64 -t unsemawang .
+      
+      - name: Tag and Push Docker image
+        if: github.event_name == 'push'
         run: |
-          echo ${{ secrets.EC2_SSH_PRIVATE_KEY }} > private_key.pem
-          ls -alh private_key.pem
-          chmod 600 private_key.pem
-          scp -o StrictHostKeyChecking=no -i private_key.pem build/libs/unsemawang-0.0.1-SNAPSHOT.jar ubuntu@${{ secrets.EC2_PUBLIC_IP }}:/home/ubuntu/unsemawang.jar
-
-      - name: Execute remote SSH commands
-        uses: appleboy/ssh-action@v0.1.7
+          docker tag unsemawang nardis0321/kdev3:latest
+          docker push nardis0321/kdev3
+          
+  deploy:
+    
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.event_name == 'push'
+    
+    steps:
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
         with:
-          host: ${{ secrets.EC2_PUBLIC_IP }}
-          username: ubuntu
-          key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-          script: sudo systemctl restart unsemawang.service
+          ssh-private-key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+
+      - name: SSH into EC2 and deploy Docker container
+        run: |
+          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
+            docker pull nardis0321/kdev3
+            docker-compose down || true
+            docker-compose up -d
+          EOF
