--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,6 +50,5 @@ cloud.aws.s3.bucket=${S3_BUCKET_NAME}
 # MultipartFile
 spring.servlet.multipart.max-file-size=3MB
 spring.servlet.multipart.max-request-size=15MB
-# HTTP form ?? ???
+# HTTP form request size
 server.tomcat.max-http-form-post-size=15MB
-
