Settings: 서버 재시작 전 로그 저장하도록 gradle.yml 수정
- 서버 재시작 전에 로그 저장 스크립트 실행문 추가

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -50,6 +50,7 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
             sudo docker pull nardis0321/kdev3
+            /home/ubuntu/scripts/save_logs.sh
             sudo docker-compose down || true
             sudo docker-compose up -d
           EOF
