--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,7 +20,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build Docker image
-        run: docker build --platform linux/amd64 -t unsemawang .
+        run: docker build --platform linux/arm64 -t unsemawang .
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -50,7 +50,6 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
             sudo docker pull nardis0321/kdev3
-            /home/ubuntu/scripts/save_logs.sh
             sudo docker-compose down || true
             sudo docker-compose up -d
           EOF
