--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,7 +20,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build Docker image
-        run: docker buildx build --platform linux/amd64,linux/arm64 -t unsemawang .
+        run: docker buildx build --platform linux/arm64 -t unsemawang .
         
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
