--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,7 +20,10 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Build Docker image
-        run: docker buildx build --platform linux/arm64 -t unsemawang .
+        run: docker buildx build --platform linux/arm64 -t unsemawang --load .
+
+      - name: Verify Docker images
+        run: docker images
         
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
