--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -53,6 +53,6 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
             sudo docker pull nardis0321/kdev3
-            sudo docker-compose down || true
-            sudo docker-compose up -d
+            sudo docker compose down || true
+            sudo docker compose up -d
           EOF
