--- a/build.gradle
+++ b/build.gradle
@@ -102,6 +102,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     testImplementation 'com.github.kstyrc:embedded-redis:0.6'
 
+    // AMQP
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
 }
 
 tasks.named('test') {
