--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,3 +61,8 @@ spring.datasource.hikari.maximum-pool-size=20
 
 # ?? ?? ???? ?? ??? ??
 spring.datasource.hikari.idle-timeout=30000
+# RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
