--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,3 +52,5 @@ spring.servlet.multipart.max-file-size=3MB
 spring.servlet.multipart.max-request-size=15MB
 # HTTP form request size
 server.tomcat.max-http-form-post-size=15MB
+# Spring Batch Job enable
+spring.batch.job.enabled=true
