--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,11 @@ dependencies {
     implementation 'org.apache.httpcomponents.core5:httpcore5:5.2'
 
     implementation 'com.github.usingsky:KoreanLunarCalendar:0.3.1'
+
+    // redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    testImplementation 'com.github.kstyrc:embedded-redis:0.6'
+
 }
 
 tasks.named('test') {
