--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,3 +52,6 @@ spring.servlet.multipart.max-file-size=3MB
 spring.servlet.multipart.max-request-size=15MB
 # HTTP form request size
 server.tomcat.max-http-form-post-size=15MB
+# Redis
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
