--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -11,4 +11,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.database=h2
 spring.h2.console.enabled=true
-
+# Redis
+spring.redis.embedded.enabled=true
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
