Fix: propertise 변경(커넥션 설정)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,3 +55,9 @@ server.tomcat.max-http-form-post-size=15MB
 # Redis
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
+
+# HikariCP? ?? ??? ??? MySQL? max_connections ?? ??? ??
+spring.datasource.hikari.maximum-pool-size=20
+
+# ?? ?? ???? ?? ??? ??
+spring.datasource.hikari.idle-timeout=30000
