--- a/build.gradle
+++ b/build.gradle
@@ -94,6 +94,9 @@ dependencies {
     // Apache 5.2
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.2'
     implementation 'org.apache.httpcomponents.core5:httpcore5:5.2'
+
+    //Firebase
+    implementation 'com.google.firebase:firebase-admin:9.4.3'
 }
 
 tasks.named('test') {
