--- a/build.gradle
+++ b/build.gradle
@@ -102,6 +102,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     testImplementation 'com.github.kstyrc:embedded-redis:0.6'
 
+    // AMQP
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+
+    // WebSocket
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+    // STOMP 프로토콜
+    implementation 'org.springframework.boot:spring-boot-starter-messaging'
 }
 
 tasks.named('test') {
