--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,9 +55,8 @@ server.tomcat.max-http-form-post-size=15MB
 # Redis
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
-
+spring.data.redis.connect-timeout=500
 # HikariCP? ?? ??? ??? MySQL? max_connections ?? ??? ??
 spring.datasource.hikari.maximum-pool-size=20
-
 # ?? ?? ???? ?? ??? ??
 spring.datasource.hikari.idle-timeout=30000
