Feat: 수정사항 1차 반영

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,6 +55,7 @@ server.tomcat.max-http-form-post-size=15MB
 # Redis
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.connect-timeout=500
 # RabbitMQ
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
