--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -67,7 +67,7 @@ jobs:
 
     runs-on: ubuntu-24.04-arm
     needs: build
-    if: github.event_name == 'push'
+    # if: github.event_name == 'push'
 
     steps:
       - name: Download build artifact
