--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,10 +57,10 @@ spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
 spring.data.redis.connect-timeout=3000
 # RabbitMQ
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.host=${RABBITMQ_HOST}
+spring.rabbitmq.port=${RABBITMQ_PORT}
+spring.rabbitmq.username=${RABBITMQ_USERNAME}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 #spring.rabbitmq.listener.simple.auto-startup=false
 # HikariCP? ?? ??? ??? MySQL? max_connections ?? ??? ??
 spring.datasource.hikari.maximum-pool-size=20
