--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,7 +61,15 @@ spring.rabbitmq.host=${RABBITMQ_HOST}
 spring.rabbitmq.port=${RABBITMQ_PORT}
 spring.rabbitmq.username=${RABBITMQ_USERNAME}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
-#spring.rabbitmq.listener.simple.auto-startup=false
+# RabbitMQ ??? ??
+spring.rabbitmq.listener.simple.auto-startup=true
+spring.rabbitmq.listener.simple.default-requeue-rejected=false
+# RabbitMQ ??? ??
+spring.rabbitmq.template.exchange=chat.exchange
+spring.rabbitmq.template.routing-key=chat.routing.key
+# RabbitMQ ???? ??
+spring.rabbitmq.publisher-confirm-type=correlated
+spring.rabbitmq.publisher-returns=true
 # HikariCP? ?? ??? ??? MySQL? max_connections ?? ??? ??
 spring.datasource.hikari.maximum-pool-size=20
 # ?? ?? ???? ?? ??? ??
