fix: rabitmq 설정 테스트3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,13 +61,13 @@ spring.rabbitmq.host=${RABBITMQ_HOST}
 spring.rabbitmq.port=${RABBITMQ_PORT}
 spring.rabbitmq.username=${RABBITMQ_USERNAME}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
-# RabbitMQ ??? ??
+# RabbitMQ Listner config
 spring.rabbitmq.listener.simple.auto-startup=true
 spring.rabbitmq.listener.simple.default-requeue-rejected=false
-# RabbitMQ ??? ??
+# RabbitMQ template congif
 spring.rabbitmq.template.exchange=chat.exchange
 spring.rabbitmq.template.routing-key=chat.routing.key
-# RabbitMQ ???? ??
+# RabbitMQ publisher config
 spring.rabbitmq.publisher-confirm-type=correlated
 spring.rabbitmq.publisher-returns=true
 # HikariCP? ?? ??? ??? MySQL? max_connections ?? ??? ??
