--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -80,11 +80,10 @@ jobs:
       - name: Display structure of downloaded files
         run: ls -R build/libs
 
-      - name: Set up SSH key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
 
       - name: Copy app.jar to EC2
         run: |
@@ -92,7 +91,7 @@ jobs:
 
       - name: SSH into EC2 and stop old app.jar (if running)
         run: |
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} "
+          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} "
             # 기존에 실행 중인 java 프로세스를 종료합니다.
             if pgrep -f 'java -jar /home/ubuntu/app.jar' > /dev/null; then
               echo 'Stopping existing app.jar process...'
@@ -104,7 +103,7 @@ jobs:
 
       - name: SSH into EC2 and run new app.jar
         run: |
-          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} "
+          ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP }} "
             # serviceAccountKey.json 환경 변수 설정
             export GOOGLE_APPLICATION_CREDENTIALS=/home/ubuntu/serviceAccountKey.json
             
