HotFix: 컬럼/테이블명 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,7 @@ spring.jpa.generate-ddl=${SPRING_JPA_GENERATE_DDL}
 spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
 spring.jpa.properties.hibernate.format_sql=${SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL}
 spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM}
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #registration
 spring.security.oauth2.client.registration.google.client-name=google
 spring.security.oauth2.client.registration.google.client-id=${YOUR_GOOGLE_CLIENT_ID}
@@ -82,7 +83,6 @@ spring.rabbitmq.template.routing-key=chat.routing.key
 # RabbitMQ publisher config
 spring.rabbitmq.publisher-confirm-type=correlated
 spring.rabbitmq.publisher-returns=true
-
 # HikariCP? ?? ??? ??? MySQL? max_connections ?? ??? ??
 spring.datasource.hikari.maximum-pool-size=50
 # ?? ?? ???? ?? ??? ??
